Fix button header spacing issue scss

--- a/src/assets/css/main.css/main.css
+++ b/src/assets/css/main.css/main.css
@@ -325,22 +325,6 @@ strong {
   display: flex;
   gap: 1rem; }
 
-.tag {
-  display: inline-block;
-  padding: 0.4rem 0.8rem;
-  font-size: 1.2rem;
-  text-transform: uppercase;
-  color: #333;
-  border-radius: 150px;
-  font-weight: 500;
-  background-color: #51cf66; }
-
-.tag--neda {
-  background-color: #51cf66; }
-
-.tag--tufts {
-  background-color: #fcc419; }
-
 .doctor__content--title {
   font-size: 2.4rem;
   color: #333;
@@ -362,6 +346,19 @@ strong {
 
 .doctor--img {
   width: 100%; }
+
+.tag {
+  display: inline-block;
+  padding: 0.4rem 0.8rem;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  color: #333;
+  border-radius: 150px;
+  font-weight: 500;
+  background-color: #51cf66; }
+
+.tag--tufts {
+  background-color: #fcc419; }
 
 .footer {
   padding: 9.6rem 0 12.8rem 0;
@@ -529,8 +526,6 @@ strong {
 /* HERO SECTION */
 /***************************/
 .hero-container {
-  /* background-color: #f4e6ed;
-  /* padding: 4.8rem 0 4.8rem 0; */
   background-image: -webkit-linear-gradient(rgba(244, 230, 237, 0.4), rgba(244, 230, 237, 0.4)), url(../../img/hero-long-3.png);
   background-image: linear-gradient(rgba(244, 230, 237, 0.4), rgba(244, 230, 237, 0.4)), url(../../img/hero-long-3.png);
   background-size: cover;
@@ -667,7 +662,9 @@ strong {
     /* 8px = 50% of 16px */
     font-size: 50%; }
   .hero {
-    grid-template-columns: 1fr; }
+    grid-template-columns: 1fr;
+    padding: 0 8rem;
+    gap: 6.4rem; }
   .hero-text-box {
     text-align: center; }
   .doctor-content {
@@ -782,48 +779,9 @@ strong {
   .btn:visited {
     padding: 2.4rem 1.6rem; }
   .section-hero {
-    padding: 2.4rem 0 6.4rem 0; }
+    padding: 0rem 0 6.4rem 0; }
   .hero {
-    padding: 0 3.2rem; }
-  .feature-icon::before,
-  .feature-icon::after {
-    content: '';
-    display: block;
-    border-radius: 50%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); }
-  .feature-icon::before {
-    width: 30%;
-    padding-bottom: 30%;
-    background-color: #f4e6ed;
-    z-index: -2; }
-  .feature-icon::after {
-    width: 22.5%;
-    padding-bottom: 22.5%;
-    background-color: #e9ccdb;
-    z-index: -1; } }
-
-/***************************/
-/* 544/16 = 32 */
-/* BELOW 544px (Phones) */
-/***************************/
-@media (max-width: 34em) {
-  .grid {
-    row-gap: 4.8rem; }
-  .grid--2-cols,
-  .grid--3-cols,
-  .grid--4-cols {
-    grid-template-columns: 1fr; }
-  .btn,
-  .btn:link,
-  .btn:visited {
-    padding: 2.4rem 1.6rem; }
-  .section-hero {
-    padding: 2.4rem 0 6.4rem 0; }
-  .hero {
-    padding: 0 3.2rem; }
+    padding: 0 0; }
   .feature-icon::before,
   .feature-icon::after {
     content: '';
