--- a/src/assets/sass/pages/_queries.scss
+++ b/src/assets/sass/pages/_queries.scss
@@ -63,6 +63,8 @@
 
   .hero {
     grid-template-columns: 1fr;
+    padding: 0 8rem;
+    gap: 6.4rem;
   }
 
   .hero-text-box {
@@ -236,66 +238,11 @@
   }
 
   .section-hero {
-    padding: 2.4rem 0 6.4rem 0;
+    padding: 0rem 0 6.4rem 0;
   }
 
   .hero {
-    padding: 0 3.2rem;
-  }
-
-  .feature-icon::before,
-  .feature-icon::after {
-    content: '';
-    display: block;
-    border-radius: 50%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-
-  .feature-icon::before {
-    width: 30%;
-    padding-bottom: 30%;
-    background-color: #f4e6ed;
-    z-index: -2;
-  }
-
-  .feature-icon::after {
-    width: 22.5%;
-    padding-bottom: 22.5%;
-    background-color: #e9ccdb;
-    z-index: -1;
-  }
-}
-
-/***************************/
-/* 544/16 = 32 */
-/* BELOW 544px (Phones) */
-/***************************/
-@media (max-width: 34em) {
-  .grid {
-    row-gap: 4.8rem;
-  }
-
-  .grid--2-cols,
-  .grid--3-cols,
-  .grid--4-cols {
-    grid-template-columns: 1fr;
-  }
-
-  .btn,
-  .btn:link,
-  .btn:visited {
-    padding: 2.4rem 1.6rem;
-  }
-
-  .section-hero {
-    padding: 2.4rem 0 6.4rem 0;
-  }
-
-  .hero {
-    padding: 0 3.2rem;
+    padding: 0 0;
   }
 
   .feature-icon::before,
